# Omnixan

./: .gitignore  03_omnixan-setup-quantum.sh  05_fix-quantum-inspire.sh  CHANGELOG.md  README.md  omnixan-setup-final.sh  pyproject.toml
.github/workflows/: ci.yml
omnixan/: .gitignore  QUANTUM_SETUP.md  README.md  __init__.py  api_contract.py  cli.py  data_model.py  doctor.py  pyproject.toml  quantum_pipeline.py  requirements.txt  setup.py  validate.py
omnixan/carbon_based_quantum_cloud/: README.md
omnixan/carbon_based_quantum_cloud/auto_scaling_module/: README.md  module.py
omnixan/carbon_based_quantum_cloud/cold_migration_module/: module.py
omnixan/carbon_based_quantum_cloud/containerized_module/: module.py
omnixan/carbon_based_quantum_cloud/load_balancing_module/: LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  QUICK_REFERENCE.txt  README.md  __init__.py  __main__.py  config.example.yaml  docker-compose.yml  example_usage.py  gitignore  load_balancing_module.py  module.py  pyproject.toml  requirements.txt  setup.py  test_load_balacning_module.py
omnixan/carbon_based_quantum_cloud/redundant_deployment_module/: MANIFEST.in  README.md  __init__.py  __main__.py  init.py  module.py  redundant_deployment_module.py
omnixan/carbon_based_quantum_cloud/redundant_deployment_module/tests/: conftest.py  init.py
omnixan/carbon_based_quantum_cloud/src/redundant_deployment_module/: init.py
omnixan/docs/: AMARR_PRINCIPLES.md  ARCHITECTURE.md  BLOCK_CANON_MAP.md  CLI.md  DAILY_TASKS.md  DATA_MODEL.md  DEVELOPMENT.md  INTERNAL_RELEASE_2026-04-01.md  MODULE_CLASSIFICATION.md  PACKAGING.md  QUANTUM_GAP_AUDIT.md  QUANTUM_PIPELINE.md  REPO_STATUS.md  SERVICE_LANGUAGE.md  SERVICE_MAP.md  SUPPORT_STATUS.md  VISION.md
omnixan/edge_computing_network/: README.md
omnixan/edge_computing_network/cache_coherence_module/: README.md  module.py
omnixan/edge_computing_network/columnar_storage_module/: module.py
omnixan/edge_computing_network/memory_pooling_module/: README.md  module.py
omnixan/edge_computing_network/near_data_processing_module/: README.md  module.py
omnixan/edge_computing_network/persistent_memory_module/: README.md  module.py
omnixan/heterogenous_computing_group/: README.md
omnixan/heterogenous_computing_group/infiniband_module/: README.md  module.py
omnixan/heterogenous_computing_group/liquid_cooling_module/: README.md  module.py
omnixan/heterogenous_computing_group/non_blocking_module/: README.md  module.py
omnixan/heterogenous_computing_group/rdma_acceleration_module/: README.md  module.py
omnixan/heterogenous_computing_group/trillion_thread_parallel_module/: README.md  module.py
omnixan/in_memory_computing_cloud/: README.md
omnixan/in_memory_computing_cloud/base_station_deployment_module/: README.md  module.py
omnixan/in_memory_computing_cloud/edge_ai_module/: README.md  module.py
omnixan/in_memory_computing_cloud/fog_computing_module/: README.md  module.py
omnixan/in_memory_computing_cloud/local_traffic_shunting_module/: README.md  module.py
omnixan/in_memory_computing_cloud/low_latency_routing_module/: README.md  module.py
omnixan/quantum_cloud_architecture/: README.md
omnixan/quantum_cloud_architecture/quantum_algorithm_module/: module.py
omnixan/quantum_cloud_architecture/quantum_circuit_optimizer_module/: README.md  module.py
omnixan/quantum_cloud_architecture/quantum_error_correction_module/: README.md  module.py
omnixan/quantum_cloud_architecture/quantum_ml_module/: README.md  module.py
omnixan/quantum_cloud_architecture/quantum_simulator_module/: README.md  module.py
omnixan/supercomputing_interconnect_cloud/: README.md
omnixan/supercomputing_interconnect_cloud/compute_storage_integrated_module/: README.md  module.py
omnixan/supercomputing_interconnect_cloud/cuda_acceleration_module/: README.md  module.py
omnixan/supercomputing_interconnect_cloud/ray_tracing_unit_module/: README.md  module.py
omnixan/supercomputing_interconnect_cloud/tensor_core_module/: README.md  module.py
omnixan/supercomputing_interconnect_cloud/tensor_slicing_module/: README.md  module.py
omnixan/tests/: test_api_consistency.py  test_cli_entrypoints.py  test_core_block_smoke.py  test_distributed_stack_smoke.py  test_optional_backend_guards.py  test_quantum_stack_smoke.py  test_release_hardening.py  test_repo_health.py
omnixan/virtualized_cluster/: README.md
omnixan/virtualized_cluster/cryogenic_control_module/: README.md  module.py
omnixan/virtualized_cluster/error_correcting_code_module/: README.md  module.py
omnixan/virtualized_cluster/fault_mitigation_module/: README.md  module.py
omnixan/virtualized_cluster/hybrid_algorithm_module/: README.md  module.py
omnixan/virtualized_cluster/quantum_interface_module/: README.md  module.py
scripts/: ci_local.sh
